@@ -1,5 +1,10 @@
 2016-06-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
+	* gawkapi.h (awk_string): Add comment about the potential lack of
+	NUL-termination.
+
+2016-06-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
 	* awk.h: Add a comment regarding the potential lack of NUL-termination
 	for Node_val strings.
 
